# minimax-usgae-plugin

./: .gitignore  .gitlab-ci.yml  .vscodeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  ISSUES.md  README.md  README.zh-CN.md  install-app.sh  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json  tsconfig.json
.github/workflows/: desktop-build.yml  publish-extension.yml  release-desktop.yml
scripts/: check-build-env.ps1  check-build-env.sh  check_startup_ui.applescript  e2e_api_key_save.applescript  e2e_api_key_save_keyboard.applescript  e2e_save_flow.sh  generate-update-json.js  install_and_smoke_test_macos.sh  publish-marketplace.cjs  remote-linux-build.sh  setup-windows-env.bat  smoke_test_macos.sh  test_dialog_cleanup.sh  test_startup_dialog.applescript  test_tauri_commands.mjs  test_tray_click_stress.sh  test_tray_stress.sh
src/: compactView.ts  extension.ts  language.ts  multiKeyState.ts  secretStore.ts
src-tauri/: Cargo.toml  SUMMARY.md  install-minimax-monitor.sh  minimax-monitor.dmg  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  test-automation.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: api-key-store-selfcheck.sh  fix_common_issues.sh
src-tauri/src/: api.rs  api_key_store.rs  commands.rs  config.rs  lib.rs  linux_fix.rs  main.rs  notifications.rs  state.rs  tray.rs  tray_icon.rs  ui_diagnostics.rs
src-tauri/tests/: config_delete_test.rs  multi_key_test.rs
src-web/: app.js  index.html  styles.css  tauri-bridge.js
tests/: aggregate-progress-ui.test.cjs  compact-view.test.cjs  key-management-ui.test.cjs  language-toggle.test.cjs  marketplace-publish.test.cjs
