[package]
name = "minimax-usage-monitor"
version = "0.1.0"
description = "MiniMax API Usage Monitor"
authors = ["decard"]
edition = "2021"
resolver = "2"

[lib]
name = "minimax_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
keyring = { version = "3", default-features = false, features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "crypto-rust"
] }
dirs = "5"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
# strip = true  # Disabled to preserve frontend resources
